# tspjax

./: .gitignore  CLAUDE.md  Makefile  README.md  conductor.json  pyproject.toml
notebooks/: README.md  curve_filling.py  tsp_quickstart.py
src/tspjax/: __init__.py  _tsplib.py  construct.py  distances.py  loader.py  perturb.py  plot.py  problem.py  santa.py
src/tspjax/data/: atsp_solutions
src/tspjax/solvers/: __init__.py  _local_search.py  candidates.py  iterated.py  three_opt.py  two_opt.py
tests/: test_construct.py  test_distances.py  test_loader.py  test_perturb.py  test_problem.py  test_santa.py  test_solvers.py
