[project]
name = "tspjax"
version = "0.1.0"
description = "Load TSPLIB problems and solve them with jax on the GPU."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "koaning" }]
keywords = ["tsp", "tsplib", "jax", "optimization", "gpu"]
dependencies = [
    "jax>=0.4.20",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "marimo>=0.9",
    "wigglystuff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tspjax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
